# Workforce-Planning-Optimization-Model

./: .gitignore  0813.py  README.md  main.py  pyproject.toml  requirements.txt  run_demo.py
configs/: config.yaml
demo/: app.py
src/data/: __init__.py  generator.py
src/eval/: __init__.py  metrics.py
src/optimization/: __init__.py  workforce_optimizer.py
src/utils/: __init__.py  helpers.py
src/viz/: __init__.py  plots.py
tests/: test_workforce_planning.py
